--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "addParameterOfDay": "Add parameter of the day",
+  "updateParameterOfDay": "Update parameter of the day",
   "calendar": "Calendar",
   "survey": "Survey",
   "settings": "Settings",
