--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -8,6 +8,7 @@
   "competeDraftSurvey": "Complete Draft Survey",
   "addANewSurvey": "Add a New Survey",
   "updateSurvey": "Update Survey",
+  "newSurvey": "New Survey",
   "completedSurveys": "Completed Surveys",
   "surveyList": "Survey List",
   "view": "View",
